# blob-creature

./: pyproject.toml
src/blob_game/: main.py
src/blob_physics/: __init__.py  blob_body.py  collision.py  controller.py  point_mass.py  spring.py  vec2.py  world.py
src/blob_renderer/: renderer.py
tests/: test_blob_body.py
